Fixed scrollbar overflow issue.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	padding:0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 	display: block;
 }
@@ -396,7 +400,7 @@ ul.one {
 	width: 200px;
 	height: 200px;
 	display: block;
-	margin: 0 auto 10px;
+	margin: 0 auto 5px;
 	border: 1px solid #eee;
 	padding: 2px;
 }
@@ -444,7 +448,7 @@ li {
 @media only screen and (min-width : 580px) {
 	.i {
 		float: right;
-		margin: 5px 9px 5px 20px;
+		margin: 5px 0px 5px 20px;
 		border: 1px solid #eee;
 		padding: 2px;
 		width: 180px;
@@ -478,22 +482,4 @@ li {
 		width: 180px;
 		height: 180px;
 	}
-}
-
-.r h1,
-.r h2,
-.r h3,
-.r .title {
-	text-align: left;
-}
-
-.r h1 {
-	font-size: 18px;
-	margin-bottom: 16px;
-}
-
-.r h2 {
-	text-transform: uppercase;
-	font-size: 14px;
-	margin-bottom: 10px;
 }
